--- a/styl/globals/main.styl
+++ b/styl/globals/main.styl
@@ -1,3 +1,10 @@
+@import ('nib')
+@import 'variables'
+
+body
+    background rgb(13,13,13)
+    color $white
+
 .container
     max-width 940px
     margin auto
