see #2 add second page (Breeding)

--- a/styl/components/media.styl
+++ b/styl/components/media.styl
@@ -2,13 +2,16 @@
     margin 0 0 24px
     padding 0 0 8px 
     font-size 14px
-    border-bottom 1px dotted rgb(99,111,111)
+    &_bordered
+        border-bottom 1px dotted rgb(99,111,111)
     &__img
         float left
         max-width 80px
         margin 0 19px 0 0
     &__heading
         font-size inherit
+    &__subheading
+        font-size 14px
     &__date
         display block
         color rgb(239, 111, 83)
