--- a/styl/globals/typography.styl
+++ b/styl/globals/typography.styl
@@ -24,4 +24,9 @@
     color rgb(239,111,83)
     &:hover
         text-decoration underline
+
+// COLORS
+
+.white
+    color rgb(255,255,255)
     
