--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,9 @@ body {
 .link:hover {
   text-decoration: underline;
 }
+.white {
+  color: #fff;
+}
 
 
 .input {
@@ -232,6 +235,8 @@ body {
   margin: 0 0 24px;
   padding: 0 0 8px;
   font-size: 14px;
+}
+.media_bordered {
   border-bottom: 1px dotted #636f6f;
 }
 .media__img {
@@ -241,6 +246,9 @@ body {
 }
 .media__heading {
   font-size: inherit;
+}
+.media__subheading {
+  font-size: 14px;
 }
 .media__date {
   display: block;
@@ -255,9 +263,18 @@ body {
   font-size: 1.5em;
 }
 .nav__list {
+  zoom: 1;
   list-style: none;
   margin: 0;
   padding: 0;
+}
+.nav__list:before,
+.nav__list:after {
+  content: "";
+  display: table;
+}
+.nav__list:after {
+  clear: both;
 }
 .nav__item {
   float: left;
@@ -267,6 +284,10 @@ body {
   padding: 11px 16px;
   text-transform: uppercase;
   letter-spacing: -1px;
+  -webkit-transition: color 0.2s ease;
+  -moz-transition: color 0.2s ease;
+  -o-transition: color 0.2s ease;
+  -ms-transition: color 0.2s ease;
   transition: color 0.2s ease;
 }
 .nav__link.active {
