--- a/styl/components/nav.styl
+++ b/styl/components/nav.styl
@@ -1,8 +1,10 @@
+@import 'nib'
+
 .nav
-    clearfix()
     margin 14px 0 0
     font-size 1.5em
     &__list
+        clearfix()
         list-style none
         margin 0
         padding 0
