add 3rd page (Horse Sale)

--- a/styl/components/media.styl
+++ b/styl/components/media.styl
@@ -12,6 +12,7 @@
         font-size inherit
     &__subheading
         font-size 14px
+        color rgb(255,255,255)
     &__date
         display block
         color rgb(239, 111, 83)
