--- a/styl/components/nav.styl
+++ b/styl/components/nav.styl
@@ -3,6 +3,7 @@
 .nav
     margin 14px 0 0
     font-size 1.5em
+    color rgb(255,255,255)
     &__list
         clearfix()
         list-style none
