--- a/styl/components/thumbnail.styl
+++ b/styl/components/thumbnail.styl
@@ -14,10 +14,10 @@
 				color rgb(99,111,111)
 			img
 				float right
-		
 	&__subheading
 		margin 14px 0 8px 0
 		font-size 18px
+		color rgb(255,255,255)
 	&__text
 		line-height 24px
 		color rgb(99,111,111)
@@ -26,6 +26,7 @@
 		margin 8px 0 0 0
 		padding 12px 16px
 		font-size 16px
+		color rgb(255,255,255)
 		text-transform capitalize
 		background rgb(239,111,83)
 		
